Fixed a black bar on the bottom that appears on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@
 
 body {
     color: #202c36;
-    overflow-y: scroll;
     background-color: #ffffff;
     margin: 0;
     min-width: 320px;
@@ -56,4 +55,10 @@ button:disabled:hover {
 
 button:hover:disabled {
     border-color: #ccc;
+}
+
+@media (max-height: 300px) {
+    body.background {
+        background-size: 2000px;
+    }
 }
